<?xml version="1.0"?>
<package format="2">
  <name>fc_tasks</name>
  <version>0.0.0</version>
  <description>Tasks for FC</description>

  <author email="ankitagg@andrew.cmu.edu">Ankit Aggarwal</author>
  <maintainer email="ankitagg@andrew.cmu.edu">Ankit Aggarwal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>fanuc_lrmate200id7l_moveit_config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <build_export_depend>fanuc_lrmate200id7l_moveit_config</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  
  <exec_depend>fanuc_lrmate200id7l_moveit_config</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <depend>fc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>comet_rpc</depend>
  <depend>rospy</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
